--- a/help/SyscallHelp.html
+++ b/help/SyscallHelp.html
@@ -4,7 +4,7 @@
 <body>
 <center>
 <h3>SYSCALL functions available in MARS</h3>
-  <h3 style="color: #ff232b">Chinese Version is provided at the end of English Version, by Microsoft translate</h3>
+  <h3 style="color: #ff232b">Chinese Version is provided at the end of English Version, machine translated by Microsoft translate</h3>
 </center>
 
 <h3>Introduction</h3>
